Atualizando ezcar center

--- a/blog.html
+++ b/blog.html
@@ -414,7 +414,7 @@
         </div>
     </div>
 
-    <script src='js/index.js' defer></script>
+    <script src='js/blog.js' defer></script>
 
 </body>
 </html>
