criando a pagina de afiliados

--- a/afiliados.html
+++ b/afiliados.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet"
         href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css">
     <link rel="icon" href='images/favicon_ezcar.webp'>
-    <title> EZCar Centers </title>
+    <title> EZCar Afiliados </title>
 </head>
 
 <body>
@@ -132,39 +132,50 @@
                 <span></span>
                 <div class="home">
                     <h1>
-                        Buscando aumentar a receita ou gerar uma nova fonte de receita para seu estacionamento?
-                        Torne-se um pátio EZCar Center e participe parte do processo
-                        mais inovador de compra e venda de veículos seminovos e usados.
+                        Em busca de uma renda extra, trabalhando de casa, nos dias e horários que desejar? Torne-se um Afiliado EZCar, 
+                        e ajude proprietários de veículos a venderem seus veículos, a um preço justo e com segurança!
                     </h1>
                     <form action="" method="POST" enctype="multipart/form-data">
                         <input type="text" name="name" placeholder="Nome" required>
                         <input type="email" name="email" placeholder="E-mail" id="email-form" required>
                         <input type="tel" name="celular" placeholder="Celular/WhatsApp" required>
                         <select name="cidade_interesse">
-                            <option disabled selected>Cidades de Interesse</option>
+                            <option disabled selected>Cidade de Residência</option>
                             <option value="São José dos Campos"> São José dos Campos </option>
                             <option value="Taubaté"> Taubaté </option>
                             <option value="Jacareí"> Jacareí </option>
                         </select>
 
 
-                        <label for="pergunta">
-                            Já possui estacionamento coberto, com portão e controle de acesso?
+                        <label for="pergunta1">
+                            Você possui computador e internet?
                         </label>
                         <div class="input_pergunta">
                             <div>
-                                <input type="radio" name="pergunta" id="pergunta"> Sim
+                                <input type="radio" name="pergunta1" id="pergunta1"> Sim
                             </div>
                             <div>
-                                <input type="radio" name="pergunta" id="pergunta"> Não
+                                <input type="radio" name="pergunta1"> Não
+                            </div>
+                        </div>
+
+                        <label for="pergunta2">
+                            Você já trabalha como afiliado de algum produto?
+                        </label>
+                        <div class="input_pergunta">
+                            <div>
+                                <input type="radio" name="pergunta2" id="pergunta2"> Sim
+                            </div>
+                            <div>
+                                <input type="radio" name="pergunta2"> Não
                             </div>
                         </div>
 
                         <label for="contrato_social">Copie e cole aqui o Contrato Social</label>
                         <input type="file" name="contrato_social" id="contrato_social">
 
-                        <label for="fotos_estacionamento">Copie e cole aqui fotos do seu estacionamento 
-                            (coloque as fotos dentro de um PDF e mande o PDF aqui)</label>
+                        <label for="fotos_estacionamento">Copie e cole aqui fotos do seu estacionamento (PDF com as
+                            fotos)</label>
                         <input type="file" name="fotos_estacionamento" id="fotos_estacionamento">
 
                         <input type="submit" id="form-botao" value="Enviar solicitação">
