--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href='css/blog.css'>
     <link rel="stylesheet" href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css">
     <link rel="icon" href='images/favicon_ezcar.webp'>
-    <title> EZCar </title>
+    <title> EZCar Blog </title>
 </head>
 <body>
     
