Alterando texto pagina afiliados

--- a/afiliados.html
+++ b/afiliados.html
@@ -124,7 +124,7 @@
         <div>
             <div>
                 <div class="titulos">
-                    <h2>Seja um EZCar Center</h2>
+                    <h2>Seja um Afiliado</h2>
                     <h3>
                         Transforme Experiências
                     </h3>
