Atualizando logo ezcar blog

--- a/afiliados.html
+++ b/afiliados.html
@@ -68,7 +68,7 @@
     <header class="cabecalho-mobile">
         <div>
             <a href="{% url 'home' %}">
-                <img src='images/ezcar_center_logo.webp' alt="EZCAR">
+                <img src='images/logo_ezcar.webp' alt="EZCAR">
             </a>
             <div>
                 <div class="botao-mobile">
@@ -86,7 +86,7 @@
             <span></span>
         </div>
         <a href="{% url 'home' %}">
-            <img src='images/ezcar_center_logo.webp' alt="EZCAR">
+            <img src='images/logo_ezcar.webp' alt="EZCAR">
         </a>
         <nav>
             <a href=".container-motivos">
