--- a/post.html
+++ b/post.html
@@ -60,10 +60,7 @@
     <header class="cabecalho-mobile">
         <div>
             <a href="{% url 'home' %}">
-                <img src='images/logo_ezcar.webp' alt="EZCAR">
-                <p>
-                    Blog
-                </p>
+                <img src='images/logo_blog.webp' alt="EZCAR">
             </a>
             <div>
                 <form method="POST" action="">
@@ -87,10 +84,7 @@
             <span></span>
         </div>
         <a href="{% url 'home' %}">
-            <img src='images/logo_ezcar.webp' alt="EZCAR">
-            <p>
-                Blog
-            </p>
+            <img src='images/logo_blog.webp' alt="EZCAR">
         </a>
         <nav>
             <form method="POST" action="">
